<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ImageButtonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_start"
            android:src="@drawable/play" />
    
        <ImageButton
            android:id="@+id/ImageButtonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_pause"
            android:src="@drawable/pause" />
    
        <ImageButton
            android:id="@+id/ImageButtonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_stop"
            android:src="@drawable/stop" />
    
        <ImageButton
            android:id="@+id/ImageButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_edit"
            android:src="@drawable/edit" />
    
        <ImageButton
            android:id="@+id/ImageButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_add"
            android:src="@drawable/add" />
    
        <ImageButton
            android:id="@+id/ImageButtonRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_remove"
            android:src="@drawable/remove" />

        </LinearLayout>

    </HorizontalScrollView>

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/horizontalScrollView" />

</RelativeLayout>
